# pgkg

./: .dockerignore  .env.bench-mem0-stack  .env.bench-openrouter-free  .env.bench-zep-stack  .env.example  .env.local-chunks  .env.local-claude  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yaml
bench/: README.md  common.py  locomo.py  longmemeval.py
migrations/: 002_schema.sql  003_search.sql  004_pagerank.sql  005_proposition_cache.sql  006_asserted_at.sql  007_search_asserted_at.sql  008_bm25_search.sql  009_query_decomposition.sql
pgkg/: __init__.py  api.py  backend.py  cli.py  config.py  db.py  embedded.py  memory.py  ml.py
pgkg/backends/: __init__.py  postgres.py
scripts/: dev_db.sh  line_count.sh  run_migrations.py
tests/: conftest.py  test_bench.py  test_chunks_only.py  test_claude_code_provider.py  test_extract_cache.py  test_memory.py  test_ml.py  test_search_sql.py
tests/fixtures/: locomo_mini.json  longmemeval_mini.json
