[project]
name = "pgkg"
version = "0.2.0"
description = "Postgres-native knowledge graph engine for agentic memory"
license = { text = "MIT" }
authors = [{ name = "ExaDev Ltd" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "openai>=1.30",
    "anthropic>=0.28",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.0",
    "pytest-mock>=3.14",
]

[project.scripts]
pgkg = "pgkg.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pgkg*", "bench*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
